[package]
name = "file-notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
chrono = "0.4.38"
futures = "0.3"
rand = "0.8.5"
tempfile = "3.12.0"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["fs", "io-util"] }

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",
    "v7",
    "fast-rng",
]
